# MDSI-AVI

./: README.md  setup.cfg
conf/experiment/: example_single_inference.yaml  hcp_resting_single_inference.yaml
conf/experiment/hp_estimator_config/: hp_example.yaml  hp_hcp_resting.yaml
conf/experiment/hp_estimator_config/fkl_dataset_config/: example_dataset.yaml  hcp_resting_dataset.yaml
conf/experiment/hp_estimator_config/fkl_dataset_config/single_model_config/: example_single_bm.yaml  example_single_uniform_bm.yaml  (+2 more)
conf/experiment/hp_estimator_config/nf_encoder_config/: example_nf_encoder.yaml  hcp_resting_nf_encoder.yaml
conf/hydra/launcher/: cpu.yaml  gpu.yaml
interactive/hcp_resting_difumo/: hcp_subjects.txt  preprocess_hcp_subjects.py
interactive/hcp_resting_difumo/conf/preprocess/: default.yaml
interactive/synthetic_example/: generate_synthetic_dataset.py  post_process_example.py
mdshvb/: distributions.py  plotting.py  transforms.py  utils.py
mdshvb/generative/: hrf.py  single_bm.py
mdshvb/hyper_parameters/: alpha_r_q.py  loading.py  training.py
mdshvb/parameters/inference/: general.py  initialization.py  single_inference.py
mdshvb/parameters/variational/: single_mf_family.py
scripts/: infer_on_data_single.py  train_hp_estimator.py
test/: conftest.py  test_transforms.py
test/generative/: test_single_bm.py
test/hyper_parameters/: test_alpha_r_q.py  test_training.py
test/parameters/inference/: test_fit.py  test_initialization.py  test_single_inference.py
test/parameters/variational/: test_single_mf_family.py
