[metadata]
name = mdshvb
version = 1.0.0
author = Louis Rouillard
author_email = louis.rouillard-odera@inria.fr
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: DSB License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy ==1.26.2
    ipykernel ==6.27.1
    ipywidgets ==8.1.1
    matplotlib ==3.8.2
    seaborn ==0.13.0
    black ==23.11.0
    flake8 ==6.1.0
    nilearn ==0.10.2
    pandas ==2.1.3
    torch ==2.1.0
    pyro-ppl ==1.8.6
    hydra-core ==1.3.2
    pytest ==8.0.1
    pytest-order ==1.2.0